<resources>
    <string name="app_name">Currency Converter Location Based</string>
    <string name="backspace">⌫</string>
    <string name="zero">0</string>
    <string name="empty" />
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="image_view_content_description">TODO</string>
</resources>
