<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:id="@+id/FirstRowButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.333"
            android:background="@drawable/circle_button"
            android:textSize="30sp"
            android:text="@string/one" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.333"
            android:background="@drawable/circle_button"
            android:textSize="30sp"
            android:text="@string/two" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.333"
            android:background="@drawable/circle_button"
            android:textSize="30sp"
            android:text="@string/three" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SecondRowButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.333"
            android:background="@drawable/circle_button"
            android:textSize="30sp"
            android:text="@string/four" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.333"
            android:background="@drawable/circle_button"
            android:textSize="30sp"
            android:text="@string/five" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.333"
            android:background="@drawable/circle_button"
            android:textSize="30sp"
            android:text="@string/six" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.333"
            android:background="@drawable/circle_button"
            android:textSize="30sp"
            android:text="@string/seven" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.333"
            android:background="@drawable/circle_button"
            android:textSize="30sp"
            android:text="@string/eight" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.333"
            android:background="@drawable/circle_button"
            android:textSize="30sp"
            android:text="@string/nine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/emptyButton"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.333"
            android:background="@drawable/circle_button"
            android:textSize="30sp"
            android:text="@string/empty" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.333"
            android:background="@drawable/circle_button"
            android:textSize="30sp"
            android:text="@string/zero" />

        <Button
            android:id="@+id/backspaceButton"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.333"
            android:background="@drawable/circle_button"
            android:textSize="30sp"
            android:text="@string/backspace" />
    </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>